Add support for javac release and enable-preview options